// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Watchlist/> should render correctly 1`] = `
<button
  className="ant-btn ant-btn-tertiary button undefined button tertiaryButton"
  data-testid="add-remove-watchlist-button"
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="plus"
    className="anticon anticon-plus"
    data-testid="plus"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="plus"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <defs>
        <style />
      </defs>
      <path
        d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
      />
      <path
        d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
      />
    </svg>
  </span>
  <span
    className="label"
    data-testid="add-remove-watchlist-label"
  >
    Watchlist
  </span>
</button>
`;

exports[`This suit is to test the Watchlist Button component Snapshot of Add Remove Watchlist Button 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-tertiary button undefined button tertiaryButton"
    data-testid="add-remove-watchlist-button"
    type="button"
  >
    <span
      aria-label="plus"
      class="anticon anticon-plus"
      data-testid="plus"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <defs>
          <style />
        </defs>
        <path
          d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
        />
        <path
          d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
        />
      </svg>
    </span>
    <span
      class="label"
      data-testid="add-remove-watchlist-label"
    >
      Watchlist
    </span>
  </button>
</DocumentFragment>
`;
